fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,6 @@ html {
   align-items: center;
 }
 
-@media screen and (max-width: 375px) {
-  .grid {
-    grid-template-columns: repeat(auto-fill, 100%);
-  }
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -27,4 +21,14 @@ img {
 
 a[target="_blank"] img {
   cursor: zoom-in;
+}
+
+@media screen and (max-width: 375px) {
+  .grid {
+    grid-template-columns: repeat(auto-fill, 100%);
+  }
+
+  .portrait {
+    height: auto;
+  }
 }
